# AEGIS

./: .gitignore  BREACH_DETECTION_EXPLAINED.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  start.sh
backend/: Dockerfile  pyproject.toml  verify_aegis_ultimate.py
backend/src/: aegis.db
backend/src/aegis/: config.py  db.py  logger.py
backend/src/aegis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/aegis/api/: aegis.db  main.py
backend/src/aegis/api/routers/: audit.py  governance.py  identity.py  investigation.py  scenarios.py  simulator.py
backend/src/aegis/audit/: ledger.py  replayer.py
backend/src/aegis/governance/: constitution.py  isolation.py  trust.py
backend/src/aegis/identity/: idp.py
backend/src/aegis/policy/: engine.py  intents.yaml  rules.py
backend/src/aegis/security/: dlp.py  memory.py  reasoning.py
backend/src/aegis/sidecar/: proxy.py
backend/src/aegis/simulator/: __init__.py  scenarios.py
docs/: ACTUAL_CODE_DETECTION.md  AEGIS_V2_ROADMAP.md  COMPLETE_SYSTEM_EXPLANATION.md  CONNECTIVITY_GUIDE.md  INTENT_DETECTION_IMPLEMENTATION.md  REAL_WORLD_INTEGRATION.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AuditArchives.jsx  ConnectivityHub.jsx  ControlCenter.jsx  GovernanceSetup.jsx  Header.jsx  IdentityRegistry.jsx  InvestigationModal.jsx  Sidebar.jsx  SimulatorOrchestrator.jsx  WorkloadNodes.jsx
scripts/: realistic_simulator.py  simulate_fleet.py
tests/: verify_aegis.py
